# MSc_thesis

./: .gitignore  Thesis.bib  delft_hulls_full.qgz  hull_comparison.qgz  pyproject.toml  references.bib
.ipynb_checkpoints/: test2-checkpoint.ipynb
code/: add_ndvi.py  cut_pointcloud.py  extract_ndvi.ipynb  fresh.ipynb  fresh.py  ndvi.py  rasterize_pcd.py  show_ndvi.py  show_ndvi2.py  test.py  test2.ipynb  voxelise_pointcloud.py
code/TreeSeparation/TreeSeparation/: CMakeLists.txt  numbers.txt  test.cpp
code/TreeSeparation/TreeSeparation/TreeSeparation/: Source.cpp
code/_ubuntu_files/mesh/: alphawrap_instances.py
code/_ubuntu_files/species/: RF_classifier.py  extract_training_data.py  feature_designer.ipynb  single_matches.csv  test_view.py  tree_bounding_boxes.geojson  tree_convex_hulls.geojson  tree_stats.py  whm_01_tid.laz
code/_ubuntu_files/wrapper/: alphawrap_instances.py  trees2forest.py
code/kadaster/: fetch_trees_kadaster.py  get_all_trees_csv.py  get_delft_trees_shapefile.py
code/point_wrap/: CMakeLists.txt  example_alphawrap.cpp
full_pipeline/: 1_diagnostics.py  1_preprocess_pointcloud.py  features.py  generate_tree_hulls.py  main.py  merge_tree_ids.py  preprocess_pointcloud.py  segmentation.py  shared_logging.py  species_matching.py  tree_feature_extraction.py
full_pipeline/segmentation_code/: FoxTree.cpp
full_pipeline2/: diagnostics.py  flush_pipeline.py  preprocess_pointcloud.py  segmentation.py  segmentation_analysis.py
full_pipeline2/whm_100/: filtered_stats.csv  forest.laz  segmentation_stats_public.csv
full_pipeline2/whm_100/tree_hulls/: segmentation_0005.geojson  segmentation_0007.geojson  segmentation_0008.geojson  segmentation_0035.geojson  segmentation_0043.geojson  segmentation_0044.geojson  segmentation_0047.geojson  segmentation_0078.geojson  segmentation_0361.geojson
full_pipeline2/whm_100_unfiltered/tree_hulls/: segmentation_0051.geojson  segmentation_0331.geojson
massive_pipe/H1_species_test/: delft_H_analysis.py  rejected_hulls.geojson  species_counts_H1.csv  species_plot.py  tile_grid_core.geojson
massive_pipe/gilfoyle_code/: create_core_tile_grid.py  filter_vegetation.py  generalize_tid.py  initialize_case.py  main.py  preprocess_municipality_trees.py  segmentation_tiles.py  shared_logging.py
massive_pipe/gilfoyle_code/archive/: generalize_tid_working.py  main_working.py
massive_pipe/gilfoyle_code/segmentation_code/: FoxTree.h
massive_pipe/old/: batch_tiles.py  clean_muni_geojson.py  preprocess_pointcloud.py
massive_pipe/tobesafe/: bbox_delft_muni.wkt  clip_tiles_to_muni.sh  create_core_tile_grid.py  filter_vegetation.py  flush_all.sh  hull_segment.py  luna.py  main_new.py  preprocess_municipality_trees.py  tid_generalization.py
massive_pipe/tobesafe/old/: main_old.py  prefilter_tiles.py
meetings/: _markdown_tutorial.md  minutes_week2.md  minutes_week3.md  minutes_week4.md  minutes_week5.md  minutes_week6.md  w2_prep.md  w3_prep.md  w4_prep.md  w5_prep.md  w6_prep.md
pipeline2/: alphawrap_instances.py  bigPlotter.py  diagnostics.py  hull_segment.py  link_xyz_laz.py  main.py  preprocess_pointcloud.py  preprocessing.py  segment_trees  segmentation.py  segmentation2.py  segmentation_public_matching.py  shared_logging.py  test.py  tuning_diagnostics.py
pipeline2/delft_100/: segmentation_stats.csv
pipeline2/segmentation_code/: CMakeLists.txt  Source.cpp
pipeline2/whm_100/: forest.laz  forest.xyz  forest_tid.laz  hull_analysis.csv  segmentation_stats.csv
pipeline2/whm_100_unfiltered/: filtered_stats.csv  segmentation_stats_public.csv
pipeline2/whm_250/: filtered_stats.csv  segmentation_stats_public.csv
report/: Gantt_Pipeline_Planner.csv  P2_methodology_outline.md  Short_Task_List_Gantt.xlsx  train_draft.tex
(+130 files in other folders)
