[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["noaha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
laspy = "^2.5.4"
rerun = "^1.0.30"
open3d = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
